--- a/CarDealer/CarDealer/Views/Car/Delete.cshtml
+++ b/CarDealer/CarDealer/Views/Car/Delete.cshtml
@@ -14,7 +14,7 @@
 
     <p class="center">
         <br />
-        <input type="submit" value="Delete" />|
-        @Html.ActionLink("Back to List", "All")
+        <input type="submit" value="Delete" />
+        <a href="..\All"><input type="button" value="Cancel"/></a>
     </p>
 }
