--- a/CarDealer/CarDealer/Views/CarDealer/Delete.cshtml
+++ b/CarDealer/CarDealer/Views/CarDealer/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CarDealerProject.Models.CarDealer
 
 @{
-    ViewBag.Title = "Delete car dealer";
+    ViewBag.Title = "Delete car dealership";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -14,7 +14,7 @@
     
     <p class="center">
         <br />
-        <input type="submit" value="Delete" /> |
-        @Html.ActionLink("Back to List", "All")
+        <input type="submit" value="Delete" />
+        <a href="..\All"><input type="button" value="Cancel"/></a>
     </p>
 }
