--- a/CarDealer/CarDealer/Views/Shared/_Layout.cshtml
+++ b/CarDealer/CarDealer/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
 
     <div class="menu center">
         <span class="menuItem"> @Html.ActionLink("Home", "Index", "Home")  </span> 
-        <span class="menuItem"> @Html.ActionLink("Car Dealers", "Index", "CarDealer")  </span> 
+        <span class="menuItem"> @Html.ActionLink("Car Dealerships", "Index", "CarDealer")  </span> 
         <span class="menuItem"> @Html.ActionLink("Cars", "Index", "Car")</span>
     </div>
 
