--- a/CarDealer/CarDealer/Views/CarDealer/ListDataContainer.cshtml
+++ b/CarDealer/CarDealer/Views/CarDealer/ListDataContainer.cshtml
@@ -33,47 +33,54 @@
    
 </script>
 
-<h2>Car dealers</h2>
-<table id="CarDealersTable" class="left">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ParkingPlaces)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Telephone)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.City)
-        </th>
-        
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
+<h2>Car dealerships</h2>
+@if (!@Model.Any())
+{
+    <h2 class="center"> There is no data to display </h2>
+}
+else
+{
+    <table id="CarDealersTable" class="left">
         <tr>
-            <td class="crop" style="width: 150px;">
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td class="crop" style="width: 110px;">
-                @Html.DisplayFor(modelItem => item.ParkingPlaces)
-            </td>
-            <td class="crop" style="width: 120px;">
-                @Html.DisplayFor(modelItem => item.Telephone)
-            </td>
-            <td class="crop" style="width: 130px;">
-                @Html.DisplayFor(modelItem => item.City)
-            </td>
-
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-            </td>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ParkingPlaces)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Telephone)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.City)
+            </th>
+        
+            <th></th>
         </tr>
-    }
 
-</table>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td class="crop" style="width: 150px;">
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td class="crop" style="width: 110px;">
+                    @Html.DisplayFor(modelItem => item.ParkingPlaces)
+                </td>
+                <td class="crop" style="width: 120px;">
+                    @Html.DisplayFor(modelItem => item.Telephone)
+                </td>
+                <td class="crop" style="width: 130px;">
+                    @Html.DisplayFor(modelItem => item.City)
+                </td>
+
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
+                    @Html.ActionLink("Details", "Details", new {id = item.Id}) |
+                    @Html.ActionLink("Delete", "Delete", new {id = item.Id})
+                </td>
+            </tr>
+        }
+
+    </table>
+}
