--- a/CarDealer/CarDealer/Views/CarDealer/SingleDataContainer.cshtml
+++ b/CarDealer/CarDealer/Views/CarDealer/SingleDataContainer.cshtml
@@ -41,7 +41,7 @@
             <span class="label-text">@Html.DisplayFor(model => model.StreetNumber)</span><br />
             <br />
         </div>
-        <div class="right carImage"></div>
+        <div class="right carDealerImage"></div>
         <div class="clear"></div>
     </fieldset>
 </div>
