Runtime Unity DI added
MockDatas for MockNHibernate Provider
Unity Dependency injection added (design time, and after run time, too).
Removed DB dependecy,
ErrorHandling, CodeCleaning, Bug hunt, DatePicker imp. GUI

--- a/CarDealer/CarDealer/Views/Car/All.cshtml
+++ b/CarDealer/CarDealer/Views/Car/All.cshtml
@@ -10,7 +10,8 @@
     $(document).ready(function () {
         @if (TempData["ErrorMessage"] != null)
         {
-            @Html.Raw("showMessageBox('Warning','" + @TempData["ErrorMessage"] + "');") 
+            var formattedMessage = MvcHtmlString.Create(Html.Encode(TempData["ErrorMessage"]));
+            @Html.Raw("showMessageBox('Warning','" + formattedMessage + "');")
         }
     });
 </script>
