--- a/CarDealer/CarDealer/Views/CarDealer/Edit.cshtml
+++ b/CarDealer/CarDealer/Views/CarDealer/Edit.cshtml
@@ -16,56 +16,56 @@
             <legend>Edit car dealership</legend>
             <div class="left">
                 <div class="textSet">
-                    <span>@Html.LabelFor(model => model.Name)</span><br />
-                    <span>@Html.EditorFor(model => model.Name)</span><br />
+                    @Html.LabelFor(model => model.Name)<br />
+                    @Html.EditorFor(model => model.Name)<br />
                     <span class="errorMessage">@Html.ValidationMessageFor(model => model.Name)</span>
                 </div>
 
                 <div class="textSet">
-                    <span>@Html.LabelFor(model => model.ParkingPlaces)</span><br />
-                    <span>@Html.EditorFor(model => model.ParkingPlaces)</span><br />
+                    @Html.LabelFor(model => model.ParkingPlaces)<br />
+                    @Html.EditorFor(model => model.ParkingPlaces)<br />
                     <span class="errorMessage">@Html.ValidationMessageFor(model => model.ParkingPlaces)</span>
                 </div>
 
                 <div class="textSet">
-                    <span>@Html.LabelFor(model => model.Telephone)</span><br />
-                    <span>@Html.EditorFor(model => model.Telephone)</span><br />
+                    @Html.LabelFor(model => model.Telephone)<br />
+                    @Html.EditorFor(model => model.Telephone)<br />
                     <span class="errorMessage">@Html.ValidationMessageFor(model => model.Telephone)</span>
                 </div>
 
                 <div class="textSet">
-                    <span>@Html.LabelFor(model => model.Email)</span><br />
-                    <span>@Html.EditorFor(model => model.Email)</span><br />
+                    @Html.LabelFor(model => model.Email)<br />
+                    @Html.EditorFor(model => model.Email)<br />
                     <span class="errorMessage">@Html.ValidationMessageFor(model => model.Email)</span>
                 </div>
 
                 <div class="textSet">
-                    <span>@Html.LabelFor(model => model.Country)</span><br />
-                    <span>@Html.EditorFor(model => model.Country)</span><br />
+                    @Html.LabelFor(model => model.Country)<br />
+                    @Html.EditorFor(model => model.Country)<br />
                     <span class="errorMessage">@Html.ValidationMessageFor(model => model.Country)</span>
                 </div>
 
                 <div class="textSet">
-                    <span>@Html.LabelFor(model => model.City)</span><br />
-                    <span>@Html.EditorFor(model => model.City)</span><br />
+                    @Html.LabelFor(model => model.City)<br />
+                    @Html.EditorFor(model => model.City)<br />
                     <span class="errorMessage">@Html.ValidationMessageFor(model => model.City)</span>
                 </div>
 
                 <div class="textSet">
-                    <span>@Html.LabelFor(model => model.ZipCode)</span><br />
-                    <span>@Html.EditorFor(model => model.ZipCode)</span><br />
+                    @Html.LabelFor(model => model.ZipCode)<br />
+                    @Html.EditorFor(model => model.ZipCode)<br />
                     <span class="errorMessage">@Html.ValidationMessageFor(model => model.ZipCode)</span>
                 </div>
 
                 <div class="textSet">
-                    <span>@Html.LabelFor(model => model.Street)</span><br />
-                    <span>@Html.EditorFor(model => model.Street)</span><br />
+                    @Html.LabelFor(model => model.Street)<br />
+                    @Html.EditorFor(model => model.Street)<br />
                     <span class="errorMessage">@Html.ValidationMessageFor(model => model.Street)</span>
                 </div>
 
                 <div class="textSet">
-                    <span>@Html.LabelFor(model => model.StreetNumber)</span><br />
-                    <span>@Html.EditorFor(model => model.StreetNumber)</span><br />
+                    @Html.LabelFor(model => model.StreetNumber)<br />
+                    @Html.EditorFor(model => model.StreetNumber)<br />
                     <span class="errorMessage">@Html.ValidationMessageFor(model => model.StreetNumber)</span>
                 </div>
             </div>
