--- a/CarDealer/CarDealer/Views/Shared/_Layout.cshtml
+++ b/CarDealer/CarDealer/Views/Shared/_Layout.cshtml
@@ -8,7 +8,12 @@
     <script src="@Url.Content("~/Scripts/jquery-1.8.2.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+
+    <script src="@Url.Content("~/Scripts/jquery-ui-1.8.24.js")" type="text/javascript"></script>
+    <link href="@Url.Content("~/Content/Themes/base/jquery-ui.css")" rel="stylesheet" type="text/css" />
+
     <script src="@Url.Content("~/Scripts/JSHelper.js")" type="text/javascript"></script>
+
 </head>
 <body class="wrap">
     <div class="header center"></div>
