--- a/CarDealer/CarDealer/Views/Car/Delete.cshtml
+++ b/CarDealer/CarDealer/Views/Car/Delete.cshtml
@@ -15,6 +15,6 @@
     <p class="center">
         <br />
         <input type="submit" value="Delete" />
-        <a href="..\All"><input type="button" value="Cancel"/></a>
+        <input type="button" value="Cancel" onclick="location.href='../All'"/>
     </p>
 }
