--- a/CarDealer/CarDealer/Views/Car/Edit.cshtml
+++ b/CarDealer/CarDealer/Views/Car/Edit.cshtml
@@ -123,7 +123,7 @@
             </div>
 
             <input class="textSet" type="submit" value="Save" />
-            <a href="..\All"><input type="button" value="Cancel"/></a>
+            <input type="button" value="Cancel" onclick="location.href='../All'"/>
         </fieldset>
     </div>
 }
