--- a/CarDealer/CarDealer/Views/CarDealer/Edit.cshtml
+++ b/CarDealer/CarDealer/Views/CarDealer/Edit.cshtml
@@ -74,7 +74,7 @@
             <div class="clear"></div>
 
             <input class="textSet" type="submit" value="Save" />
-            <a href="..\All"><input type="button" value="Cancel"/></a>
+            <input type="button" value="Cancel" onclick="location.href = '../All'" />
         </fieldset>
     </div>
 }
